# RAG-SAAS

./: .coderabbit.yaml
app/api/routes/: auth.py  query.py
app/core/: config.py
app/services/: agent_tools.py  google_sheets.py  llm.py
frontend/src/app/app/chat/: page.tsx
frontend/src/app/app/knowledge/: page.tsx
rag-saas/: .dockerignore  .gitignore  Dockerfile  frontend_strategy.md  main.py  pyproject.toml  railway.toml  supabase_migration.sql
rag-saas/app/: main.py
rag-saas/app/api/routes/: auth.py  query.py  upload.py  user_routes.py
rag-saas/app/core/: auth.py  config.py  logging.py
rag-saas/app/db/: supabase_client.py  vector_store.py
rag-saas/app/models/: schemas.py
rag-saas/app/services/: ingestion.py  llm.py  metadata.py  retrieval.py  storage.py
rag-saas/frontend/: package-lock.json
rag-saas/frontend/src/app/: globals.css  layout.tsx  page.tsx
rag-saas/frontend/src/app/app/: layout.tsx
rag-saas/frontend/src/app/app/api-keys/: page.tsx
rag-saas/frontend/src/app/app/chat/: page.tsx
rag-saas/frontend/src/app/app/dashboard/: page.tsx
rag-saas/frontend/src/app/app/knowledge/: page.tsx
rag-saas/frontend/src/app/app/settings/: page.tsx
rag-saas/frontend/src/app/auth/: page.tsx
rag-saas/frontend/src/components/ui/: shared.tsx
